# Embedded-Linux

./: README.md
AdminLinux_Tasks/adminlinux_task1/: create_direc.sh
AdminLinux_Tasks/adminlinux_task2/question2/: question 2 answer
EmbeddedLinux_Tasks/EmbeddedLinux_task4/: Task1.elf
EmbeddedLinux_Tasks/EmbeddedLinux_task4/includes/: PORT_priv.h
EmbeddedLinux_Tasks/EmbeddedLinux_task4/sources/: Task1.c
EmbeddedLinux_Tasks/EmbeddedLinux_task5/StaticLink/: main.c
EmbeddedLinux_Tasks/EmbeddedLinux_task8(u-boot_tftp)/: readme.md
EmbeddedLinux_Tasks/EmbeddedLinux_task9(kernel)/: readme.md
EmbeddedLinux_Tasks/Task10 (busybox)/: readme.md
EmbeddedLinux_Tasks/Task11 (BusyBox_NFS)/: readme.md
EmbeddedLinux_Tasks/Task4/includes/: PORT_cfg.h
EmbeddedLinux_Tasks/Task5(Cmake)/: README.md
EmbeddedLinux_Tasks/Task5(Cmake)/DynamicLink/: main.c
EmbeddedLinux_task1/DynamicLibrary_lab/DynamicLink/: calculator_dynamic
EmbeddedLinux_task1/DynamicLibrary_lab/Lib/: main.c
EmbeddedLinux_task1/StaticLibrary_lab/Lib/: div.c  mod.c  mult.c  sub.c
EmbeddedLinux_task3/: readme.md
EmbeddedLinux_task4/: README.md  Task1.hex  task4.md
EmbeddedLinux_task4/includes/: DIO.h  PORT.h
EmbeddedLinux_task4/sources/: DIO.c  PORT.c  PORT_cfg.c
EmbeddedLinux_task5/DynamicLink/: CMakeLists.txt
EmbeddedLinux_task5/StaticLink/: CMakeLists.txt
EmbeddedLinux_task5/StaticLink/Sources/: add.c
EmbeddedLinux_task6/: README.md
EmbeddedLinux_task7(u-boot)/: readme.md
adminlinux_task3/: q1.sh
adminlinux_task4/: output.md  sec1.sh
exam/: check_dir.sh
(+4 files in other folders)
